Fixed #91, adding applications of gaze.

--- a/body.html
+++ b/body.html
@@ -81,10 +81,12 @@
 		<h2>Gaze</h2>
 
 		<p>
-			Another useful muscle in our bodies are those that control our gaze.
+			Another useful muscle in our bodies are those in our eyes that control our gaze.
 			Gaze is inherently social information that refers to inferences about where someone is looking based on the position of their pupils relative to targets in a space.
 			Gaze tracking technology usually involves machine vision techniques, using infrared illumination of pupils, then time series analysis and individual calibration to track pupil movements over time.
-			These can have useful applications in things like <a href="3D.html">virtual reality</a>.
+			These can have many useful applications in things like <a href="3D.html">virtual reality</a>.
+			For example, in a game, gaze detection might allow non-player characters to notice when you are looking at them, and respond to you.
+			In the same way, gaze information might be propagated to a player's avatar, moving it's eyes in the player's eyes move, helping other human players in social and collaborative games know when a teammate is looking your way. 
 		</p>
 
 		<p>
