Fixed #92, adding detail about Kinect.

--- a/body.html
+++ b/body.html
@@ -140,7 +140,15 @@
 
 		<p>
 			Other applications have moved beyond specific muscles to the entire body and its skeletal structure.
-			For example, researchers have explored whole body gestures, allowing for hands-free interactions.
+			The most widely known example of this is the <a href="https://en.wikipedia.org/wiki/Kinect" target="_blank">Microsoft Kinect</a>, shown in the image at the beginning of this chapter.
+			The Kinect used a range of cameras and infrafred projectors to create a depth map of a room, including the structure and posture of the people in this room.
+			Using this depth map, it build basic skeletal models of players, including the precise position and orientation of arms, legs, and heads.
+			This information was then available in real-time for games to use as sources of input (e.g., mapping the skeletal model on to an avatar, using skeletal gestures to invoke commands).
+		</p>
+			
+		<p>
+			But Kinect was just one technology that emerged from a whole range of explorations of body-based sensing.
+			For example, researchers have explored whole-body gestures, allowing for hands-free interactions.
 			This technique uses the human body as an antenna for sensing, requiring no instrumentation to the environment, and only a little instrumentation of the user (<a href="http://dx.doi.org/10.1145/2207676.2208330">Cohn et al. 2012</a>):
 		</p>
 
