Added speech recognition video.

--- a/body.html
+++ b/body.html
@@ -45,6 +45,11 @@
 			Researchers have explored how to leverage these muscle-based signals to act in virtual worlds.
 		</p>
 
+		<p class="embed-responsive embed-responsive-16by9">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/yxxRAHVtafI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<center>A basic overview of advanced speech recognition.</center>
+		</p>
+		
 		<h2>Speech</h2>
 
 		<p>
