--- a/architecture.html
+++ b/architecture.html
@@ -120,7 +120,7 @@
 				The view's job is to render the controls, listen for input from the user (e.g., clicking the login button), and display any output the controller decides to provide (e.g., form validation feedback).
 			</li>
 			<li>
-				The <strong>controller</strong> mediates implements the logic of the user interface.
+				The <strong>controller</strong> implements the logic of the user interface.
 				In our login form example above, that includes validating the username and password (e.g., neither can be empty), and submitting the information when the login button is pressed.
 				The controller gets and stores data when necessary, and tells the view to update itself as the model changes.
 			</li>
