Fixed #98, addressing foldable displays briefly.

--- a/2D.html
+++ b/2D.html
@@ -91,7 +91,8 @@
 		<p>
 			Researchers continue to innovate in display technology, especially with new forms of interaction in mind.
 			For example, researchers have enhanced existing display technologies by making them transparent, allowing for new collaboration opportunities while managing privacy (<a href="https://doi.org/10.1145/2642918.2647350">Lindlbauer et al. 2014</a>).
-			Others have played with new bendable displays that allow for depth and parallax in images (<a href="https://doi.org/10.1145/2984511.2984524">Gotsch et al. 2016</a>):
+			Others have played with new bendable, foldable displays that allow for depth and parallax in images (<a href="https://doi.org/10.1145/2984511.2984524">Gotsch et al. 2016</a>).
+			Some foldable displays are entering the marketplace, but without much vision yet for how user interfaces will be adapted to exploit them.
 		</p>
 
 		<p class="embed-responsive embed-responsive-16by9">
