Fixed #42, including several writing improvements.

--- a/physical.html
+++ b/physical.html
@@ -40,7 +40,7 @@
 		</blockquote>
 
 		<p>
-			This basic idea, that the massive rift between our physical and digital worlds should be bridged by a diversity of new input and output media, dovetailed Weiser's vision of ubiquitous computing (<a href="http://www.jstor.org/stable/24938718">Weiser 1991</a>). However, rather than envisioning a world of embedded computing, it focused on our embodied experiences with physical objects.</p>
+			This basic idea, that the massive rift between our physical and digital worlds should be bridged by a diversity of new physical input and output media, dovetailed Weiser's vision of ubiquitous computing (<a href="http://www.jstor.org/stable/24938718">Weiser 1991</a>). However, rather than envisioning a world of embedded computing, it focused on our embodied experiences with physical objects.</p>
 
 		<p>
 			The impact of this vision was an explosion of research to create more physical input and output.
@@ -55,7 +55,17 @@
 		</p>
 
 		<p>
-			One of the earliest forms of digital printing was the stock ticker machine, which printed text on a thin strip of paper:
+			Why was printing so important as computers first became ubiquitous?
+			For most of the 20th century, paper was the central medium for transmitting information.
+			We used typewriters to create documents.
+			We stored documents in file cabinets.
+			We used photocopiers to duplicate documents.
+			The very notion of a file and folder in graphical user interfaces mirrored the ubiquity of interacting with paper.
+			Printers were a necessary interface between the nascent digital world and the dominant paper-based world of information.
+		</p>
+		
+		<p>
+			One of the earliest forms of digital printing was the stock ticker machine, which printed text on a thin strip of paper on which messages are recorded:
 		</p>
 
 		<p>
@@ -67,7 +77,8 @@
 
 		<p>
 			While ticker tape was the most ubiquitous before the advent of digital computers, printing devices had long been in the imagination of early computer scientists.
-			<a href="https://de.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a>, the English mathematician and philosopher who first imagined the concept of a programmable digital computer in 1822, also imagined a mechanical printing device that could print the results of his imagined differencing machine.
+			<a href="https://de.wikipedia.org/wiki/Charles_Babbage">Charles Babbage</a> was an English mathematician and philosopher who first imagined the concept of a programmable digital computer in 1822.
+			He also imagined, however, a mechanical printing device that could print the results of his imagined differencing machine.
 			Eventually, people began to engineer these printing devices.
 			For example, consider the dot matrix printer shown in the video below, which printed a grid of ink.
 			These printers were ubiquitous in the 1980's, and a general extension of both ticker tape printers and a deeper integration with digital printing from general purpose computers.
@@ -129,11 +140,11 @@
 			Whereas printing is all about creating physical form to digital things, another critical bridge between the physical and digital world is adapting digital things to our physical world.
 			Screens, for example, are one of the key ways that we present digital things, but their rigidity has a way of defining the physical form of objects, rather than objects defining the physical form of screens.
 			The iPhone is a flat sheet of glass, defined by the screen; a laptop is shape of a screen.
-			Why aren't our screens instead shaped like our objects?
+			Researchers have long pondered why are screens have to be flat, and have envisioned different forms of output that might have new unimagined benefits.
 		</p>
 	
 		<p>		
-			Researchers have worked hard to flip this relationship by making screens flexible and bendable.
+			Some research has focused on making screens flexible and bendable.
 			For example, one technique takes paper, plastics, and fabrics, and makes it easy to create programmable shape-changing behaviors with those materials (<a href="https://doi.org/10.1145/2984511.2984520">Ou et al. 2016</a>).
 			As seen in the video below, this creates a new kind of digital display that can dynamically convey information and shape.
 		</p>
@@ -166,6 +177,7 @@
 		<p>
 			This line of research innovates in both the industrial forms that interfaces take, while offering new possibilities for how they are manipulated physically.
 			It envisions a world in which digital information might be presented and interacted with in the shape most suitable to the data, rather than adapting the data to the shape of a screen.
+			Most of these innovation efforts are not driven by problems with existing interfaces, but opportunities for new experiences that we have not yet envisioned.
 		</p>
 
 		<h2>Haptics</h2>
