Added reference to mediation.

--- a/physical.html
+++ b/physical.html
@@ -40,7 +40,10 @@
 		</blockquote>
 
 		<p>
-			This basic idea, that the massive rift between our physical and digital worlds should be bridged by a diversity of new physical input and output media, dovetailed Weiser's vision of ubiquitous computing (<a href="http://www.jstor.org/stable/24938718">Weiser 1991</a>). However, rather than envisioning a world of embedded computing, it focused on our embodied experiences with physical objects.</p>
+			This basic idea, that the massive rift between our physical and digital worlds should be bridged by a diversity of new physical input and output media, dovetailed Weiser's vision of ubiquitous computing (<a href="http://www.jstor.org/stable/24938718">Weiser 1991</a>).
+			However, rather than envisioning a world of embedded computing, it focused on our embodied experiences with physical objects.
+			Both of these themes are another example of how interfaces play a central role in <a href="mediation.html">mediating our interactions</a>.
+		</p>
 
 		<p>
 			The impact of this vision was an explosion of research to create more physical input and output.
