Fixed #100, several smaller conceptual issues.

--- a/physical.html
+++ b/physical.html
@@ -181,6 +181,7 @@
 			This line of research innovates in both the industrial forms that interfaces take, while offering new possibilities for how they are manipulated physically.
 			It envisions a world in which digital information might be presented and interacted with in the shape most suitable to the data, rather than adapting the data to the shape of a screen.
 			Most of these innovation efforts are not driven by problems with existing interfaces, but opportunities for new experiences that we have not yet envisioned.
+			With many innovations from research such as foldable displays now make it to market, we can see how technology-driven innovation, versus problem-driven innovation, can struggle to demonstrate value in the marketplace.
 		</p>
 
 		<h2>Haptics</h2>
@@ -247,6 +248,7 @@
 			While this exploration of media for bridging bits and atoms has been quite broad, it is not yet deep.
 			Many of these techniques are only just barely feasible, and we still know little about what we might do with these techniques, how useful or valued these applications might be, or what it would take to manufacture and maintain the hardware they require.
 			Nevertheless, it's clear that the tangible bits that Ishii and Ullmer envisioned are not only possible, but rich, under-explored, and potentially transformative.
+			As the marketplace begins to build some of these innovations into products, we will begin to see just how valuable these innovations are in practice.
 		</p>
 
 		<center><p class="lead"><a href="help.html">Next chapter: Help</a></p></center>
