--- a/help.html
+++ b/help.html
@@ -109,6 +109,21 @@
 			For example, they may need to index documentation with multiple different descriptions of the same content.
 			They might also have to teach terminology to people so that they know how to find relevant functionality.
 		</p>
+		
+		<h2>Tutorials</h2>
+		
+		<p>
+			One of the most straightforward ways of offering help is to directly teach an interface to new users.
+			This can include onboarding experiences that explain key features, explain how to navigate an interface, and show how to ask for futher help.
+			In principle, this might seem like the most effective way to prevent future help needs.
+			But in practice, most users are goal-oriented, and view onboarding tutorials as a distraction from whatever goal they are trying to complete.
+			Rosson and Carroll (<a href="#rosson">1987</a>) described this as the <em>paradox of the active user</em>.
+			Put simply, users need to learn interfaces to succeed at their goal, but users often view learning as a distraction from their goal.
+			This paradoxical behavior forces designers to consideer ways of embedding that teaching throughout a user's goal-driven behavior.
+			For example, this might include waiting until a user reaches a dead end, but making help resources prominent at that dead end.
+			Or, trying to detect if a user is stuck, then recommending relevant help.
+			This paradoxical behavior necessitates the many alternative forms of help in the coming sections.
+		<p>
 
 		<h2>Searching for help</h2>
 
@@ -202,7 +217,7 @@
 		
 		<p>
 			While many newer products have begun to explore the use of digital voice assistants to provide help, they are not essentially different from all of the help retrieval systems above.
-			The only difference is that rather than a person typing a query to a system, the speak it.
+			The only difference is that rather than a person typing a query to a system, they speak it.
 			That query then gets evaluated using all of the same retrieval mechanisms that have existed over the past several decades, relying on content written by technical writers or other users with answers.
 		</p>
 
@@ -225,8 +240,8 @@
 		</p>
 
 		<p>
-			This research was the inspiration for the much-derided <a href="https://en.wikipedia.org/wiki/Office_Assistant">Microsoft Clippy</a>, which tried to help in the same way, but did not use any of the sophisticated inferencing techniques.
-			This resulted in Clippy interrupting at unwanted times, offering unwanted help.
+			This research was the inspiration for the much-derided <a href="https://en.wikipedia.org/wiki/Office_Assistant">Microsoft Clippy</a>, which tried to help in the same way, but did not use any of the sophisticated prediction techniques.
+			This use of inferior rule-based predictions resulted in Clippy interrupting at unwanted times, offering unwanted help.
 		</p>
 
 		<p>
@@ -330,6 +345,8 @@
 
 		<p>Norman, D. A. (2013). <a href="https://books.google.com/books/about/The_Design_of_Everyday_Things.html?id=nVQPAAAAQBAJ">The design of everyday things: Revised and expanded edition. Basic books.</p>
 
+		<p id="rosson">Rosson, M. B., & Carroll, J. M. (1987). <a href="http://citeseerx.ist.psu.edu/viewdoc/download/?doi=10.1.1.35.1606&rep=rep1&type=pdf" target="_blank">Paradox of the active user</a>. Interfacing thought: Cognitive aspects of human-computer interaction.</p>
+			
 		<p>Sellen, A., & Nicol, A. (1995). <a href="https://doi.org/10.1016/B978-0-08-051574-8.50073-X">Building User-centered on-line help</a>. In Human-computer interaction.</p>
 
 		<script type="text/javascript">
