Fixed #101, resolving several student critiques.

--- a/ip.html
+++ b/ip.html
@@ -198,7 +198,7 @@
 
 		<ul>
 			<li>If look and feel is copyrighted, Apple's claims to look and feel were not original, since Xerox PARC invented them (and they based them on other ideas from academia).</li>
-			<li>Legal precedent suggested that layouts of content in graphic design are were not copyrightable
+			<li>Legal precedent suggested that layouts of content in graphic design were not copyrightable.
 			<li>Interfaces have functionality, and so patent law must be invoked, since U.S. law requires that if something is patentable, it is ineligible for copyright protection.
 			<li>There is a long history of protecting the products of human factors engineering ideas by patent law, but no history of protecting it through copyright.
 		</ul>
@@ -236,6 +236,11 @@
 			Both mutually agreed that rather than spending hundreds of millions of dollars on lawyers, they would spend hundreds of millions of dollars on partnership.
 		</p>
 
+		<p class="embed-responsive embed-responsive-16by9">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/R1tFtMjFmYA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<center>A discussion of the Apple v Samsung settlement.</center>
+		</p>
+		
 		<h2>What is the effect of interface idea ownership on innovation?</h2>
 
 		<p>
@@ -249,6 +254,8 @@
 			Several companies, including Facebook, eBay, and Google, warned that actually forcing Samsung to pay these damages would lead to a flood of litigation between technology companies, since the companies had so liberally borrowed from each other in their designs.
 			Their core argument was that complex, "multi-component" devices like smartphones and tablets simply cannot litigated through the narrow and granular lens of patents.
 			Samuelson, again providing commentary on this landmark case on patent law, summarized the legal arguments, and raised concerns about the cost of an industry-wide endless patent war, draining companies of innovation, and exhausting courts (<a href="https://doi.org/10.1145/2935878">Samuelson 2016</a>, <a href="https://doi.org/10.1145/3041043">Samuelson 2017</a>).
+			In May of 2018, a jury awarded Apple $539 million in damages.
+			Rather than pursue an appeal, Samsung settled with Apple outside of court in June of 2018, but the terms of that settlement were not revealed.
 		</p>
 
 		<p>
@@ -297,7 +304,7 @@
 				<strong>If you want to monetize a copyright or patent</strong>, recognize that companies don't always see value in licensing IP.
 				It may be cheaper for them to copy your IP and risk a lawsuit, or simply learn about your idea and invent their own slightly different idea that doesn't infringe upon your rights, or your organization's rights.
 				In fact, in some cases, copyrights and patents can interfere with realizing your ideas.
-				For example, because copyrights and patents are weak protection, and protecting them come with costs, venture capitalists who invest in ideas are much more interested trade secrets, since they are not public.
+				For example, because copyrights and patents are weak protection, and protecting them come with costs, venture capitalists who invest in ideas are much more interested in trade secrets, since they are not public.
 			</li>
 		</ul>
 
@@ -305,7 +312,10 @@
 			If you think all of this IP law is a huge hassle and counterproductive to innovation, explore ways you might advocate for change in IP law.
 			You can sign petitions, support new laws, and advocate for lobbying positions as part of the organization for which you work.
 			If you take the opposite stance, find ways to strengthen intellectual property law in a way you protects you and others.
-			Regardless of what you think, these laws affect your work on user interface software technologies, and so you should closely monitor changes in intellectual property law and legal precedent.
+			My personal stance is IP law is ultimately an impediment to innovation.
+			It starts from the premise that people can "own" ideas, which I think is a false premise.
+			Ideas are always a combination of other ideas, so I feel that drawing ownership boundaries around them is false and counterproductive.
+			Regardless of what you or I think, these laws affect do your work on user interface software technologies, and so you should closely monitor changes in intellectual property law and legal precedent.
 		</p>
 
 		<center><p class="lead"><a href="translation.html">Next chapter: technology transfer</a></p></center>
